implementation-of-ability-to-sign-in-throw-instagram

--- a/client/package.json
+++ b/client/package.json
@@ -5,8 +5,10 @@
   "proxy": "http://localhost:3001",
   "dependencies": {
     "axios": "^0.16.2",
+    "dotenv": "^4.0.0",
     "react": "^15.6.1",
-    "react-dom": "^15.6.1"
+    "react-dom": "^15.6.1",
+    "react-router-dom": "^4.1.1"
   },
   "devDependencies": {
     "react-scripts": "1.0.7"
